# yet-another-messenger

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
